# ace-online

./: .cvsignore  .gitignore  AUTHORS  CLAUDE.md  CMakeLists.txt  COPYING  ChangeLog  Dockerfile  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  configure  configure.in  jsconfig.json  ltconfig  mkdist  package-lock.json  package.json  webpack.config.js
.github/workflows/: pages.yml
desktop/: canfield.desktop  freecell.desktop  golf.desktop  mastermind.desktop  merlin.desktop  minesweeper.desktop  pegged.desktop  solitaire.desktop  spider.desktop  taipei.desktop  thornq.desktop
docs/: intro.html  toolkit.html
games/: .cvsignore  ChangeLog  Makefile  Makefile.am  Makefile.in  canfield.c  freecell-help.c  freecell-img.c  freecell.c  freecell.html  golf-help.c  golf-img.c  golf.c  golf.html  mastermind-help.c  mastermind-img.c  mastermind.c  mastermind.html  merlin-help.c  merlin-img.c  merlin.c  merlin.html  minesweeper-help.c  minesweeper-img.c  minesweeper.c  minesweeper.html  pegged-help.c  pegged-img.c  pegged.c  pegged.html  solitaire-help.c  solitaire-img.c  solitaire.c  solitaire.html  spider.c  spider.html  split-tiles  taipedit-help.c  taipedit-img.c  taipedit.c  (+23 more)
lib/: .cvsignore  Makefile  Makefile.am  Makefile.in  cards.c  cards.h  funcs.c  funcs.h  gif2pack.c  help.c  imagelib.c  imagelib.h  images.in  make-cards.c  make-imglib.c  nocards.c  penguins.c  stack.c  table.c  table.h  table_ai.c  table_ck.c  table_dc.c  table_dg.c  table_dp.c  table_in.c  table_ky.c  table_rd.c  table_rn.c  table_rs.c  text2c.c  xwin.c  xwin.h
src/: launcher.c
src/wasm/: xwin.c
src/wasm/stubs/X11/: Xatom.h  Xlib.h  Xutil.h  keysym.h
tests/: .cvsignore  Makefile  Makefile.am  Makefile.in  penguins.c  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  test6c.c
tools/: patch-sources.sh
wasm/: ace-online.css  beeper.js  drawer.js  event.js  exports.js  funcs.c.patch  funcs_shim.c  games.json  imagegen.c.mustache  imagegen.mjs  imagelib.c.mustache  imagelib.js  imagelib_shim.cpp  index.html  index.js  js_callback.c  manifest.webmanifest  native_shim.c  packer.mjs  service-worker.js  solitaire.c.patch
