dnl Process this file with autoconf to produce a configure script.
AC_INIT(lib/cards.h)
AM_INIT_AUTOMAKE(ace,1.1)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Checks for libraries.
dnl Replace `main' with a function in -lgd:
dnl doesn't work if gd isn't where the compiler can find it
dnl AC_CHECK_LIB(gd, gdImageCreateFromGif)

dnl Checks for header files.
AC_PATH_XTRA
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/time.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_HEADER_TIME

dnl Checks for library functions.
AC_FUNC_UTIME_NULL
AC_CHECK_FUNCS(gettimeofday mkdir strdup strstr)

opt_gd=
AC_ARG_WITH(gd,[  --with-gd=DIR           location of the GD library],opt_gd=$withval)
AC_ARG_WITH(xpm,[  --with-xpm=DIR          location of the XPM library],opt_xpm=$withval)

case "$with_gd" in
  yes|no) AC_MSG_ERROR([
*** Directory must be specified for --with-gd])
    ;;
  "")
    GD_CFLAGS=
    GD_LIBS=-lgd
    ;;
  *)
    if test -f $with_gd/include/gd.h
    then
      GD_CFLAGS=-I$with_gd/include
    else
      GD_CFLAGS=-I$with_gd
    fi
    if test -f $with_gd/lib/libgd.a
    then
      GD_LIBS=$with_gd/lib/libgd.a
    else
      GD_LIBS=$with_gd/libgd.a
    fi
    ;;
esac

case "$with_xpm" in
  yes|no) AC_MSG_ERROR([
*** Directory must be specified for --with-xpm])
    ;;
  "")
    XPM_CFLAGS=
    XPM_LIBS=
    ;;
  *)
    if test -f $with_xpm/lib/xpm.h
    then
      XPM_CFLAGS=-I$with_xpm/lib
    else
      XPM_CFLAGS=-I$with_xpm/include/X11
    fi
    if test -f $with_xpm/lib/libXpm.a
    then
      XPM_LIBS="-L$with_xpm/lib"
    else
      XPM_LIBS="-L$with_xpm"
    fi
    ;;
esac

AC_SUBST(GD_CFLAGS)
AC_SUBST(GD_LIBS)

AC_SUBST(XPM_CFLAGS)
AC_SUBST(XPM_LIBS)


AC_OUTPUT(Makefile lib/Makefile games/Makefile tests/Makefile)
